DSE 5.1.0
 * Improve StatementRestrictions::getPartitionKeys() execution speed (APOLLO-115)
 * Move responsibility for qualifying ks in authz stmts to IResource (APOLLO-76)
 * Insert default superuser role with fixed timestamp (APOLLO-18)
 * Make Permissions extensible (APOLLO-26)
 * Make IResource more easily extensible (APOLLO-26)
 * Add method to IAuthenticator to login by user as well as by role (APOLLO-70)
 * Add private protocol version (APOLLO-2)
Merged from DSE 5.0.4
 * Wait for remaining tasks to finish on RepairJob after task failure (APOLLO-87)
 * Allow the prepared statement cache size to be changed. (APOLLO-50)

3.12
 * cqlsh auto completion: refactor definition of compaction strategy options (CASSANDRA-12946)
 * Add support for arithmetic operators (CASSANDRA-11935)

3.11
 * Fix inconsistencies in cassandra-stress load balancing policy (CASSANDRA-12919)
 * Fix validation of non-frozen UDT cells (CASSANDRA-12916)
 * AnticompactionRequestSerializer serializedSize is incorrect (CASSANDRA-12934)

3.10
 * Don't shut down socket input/output on StreamSession (CASSANDRA-12903)
 * Fix Murmur3PartitionerTest (CASSANDRA-12858)
 * Move cqlsh syntax rules into separate module and allow easier customization (CASSANDRA-12897)
 * Fix CommitLogSegmentManagerTest (CASSANDRA-12283)
 * Fix cassandra-stress truncate option (CASSANDRA-12695)
 * Fix crossNode value when receiving messages (CASSANDRA-12791)
 * Don't load MX4J beans twice (CASSANDRA-12869)
 * Extend native protocol request flags, add versions to SUPPORTED, and introduce ProtocolVersion enum (CASSANDRA-12838)
 * Set JOINING mode when running pre-join tasks (CASSANDRA-12836)
 * remove net.mintern.primitive library due to license issue (CASSANDRA-12845)
 * Properly format IPv6 addresses when logging JMX service URL (CASSANDRA-12454)
 * Optimize the vnode allocation for single replica per DC (CASSANDRA-12777)
 * Use non-token restrictions for bounds when token restrictions are overridden (CASSANDRA-12419)